tests/sema/fail/v36_fail_shift_literal_high.ep
# COMPILE_FAIL_CONTAINS: operator << shift count literal 8 out of range for u8; expected 0 <= count < 8
fun main(): void {
    let value = u8(1) << 8
}
